# Autonomous_collision_avoidance

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/huofu/: CMakeLists.txt  package.xml
src/huofu/launch/: huofu.launch
src/huofu/src/: 0921点云.cpp  huofu (copy).cpp  huofu copy.cpp  huofu.cpp  huofu_success.cpp  huofullidarsuccess.cpp  test.cpp
src/misson_c/: CMakeLists.txt  package.xml
src/misson_c/include/: pcl_filter.h
src/misson_c/launch/: mission_c.launch
src/misson_c/src/: pcl_filter.cpp  pcl_segement.cpp  rgb_detect.cpp
